step3_ingress_by_header/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: 'true'
    nginx.ingress.kubernetes.io/canary-by-header: 'x-region'
    nginx.ingress.kubernetes.io/canary-by-header-value: 'kor'
  namespace: ingress-test
  name: ingress-echo-canary
spec:
  ingressClassName: nginx
  rules:
    - host: canary.test.com
      http:
        paths:
          - path: /echo
            pathType: Exact
            backend:
              service:
                name: echo-v2
                port:
                  number: 80
